@@ -508,6 +508,9 @@ ACE_HAS_PTHREAD_PROCESS_ENUM            pthread.h declares an enum with
                                         PTHREAD_PROCESS_PRIVATE and
                                         PTHREAD_PROCESS_SHARED values.
 ACE_HAS_PTHREAD_SETSTACK                Platform has pthread_attr_setstack().
+ACE_HAS_PTHREAD_NP_H                    Platform has <pthread_np.h>  FreeBSD
+                                        declares non-portable (*_np) pthread
+                                        functions in this header.
 ACE_HAS_PURIFY                          Purify'ing.  Set by wrapper_macros.GNU.
 ACE_HAS_QUANTIFY                        Quantify'ing.  Set by wrapper_macros.GNU.
 ACE_HAS_RECURSIVE_THR_EXIT_SEMANTICS    Platform will recurse
