@@ -66,6 +66,11 @@ extern "C" pthread_t pthread_self (void);
    }
 #endif /* !ACE_LACKS_PTHREAD_H */
 
+#if defined (ACE_HAS_PTHREAD_NP_H)
+// FreeBSD declares _np (non-portable) pthread extensions in <pthread_np.h>
+#  include /**/ <pthread_np.h>
+#endif
+
 // @todo: need to reoganize to put includes at the top and the rest of the
 // code at the bottom.  Also, move the classes out of this file.
 #if defined (ACE_HAS_PTHREADS)
